fix card tooltip position on tablet, mbig screen

--- a/assets/template/css/card.less
+++ b/assets/template/css/card.less
@@ -93,7 +93,7 @@
                   align-items: center;
                   margin: 30px 0;
                   
-                  @media @m {
+                  @media @t, @mBig, @m {
                     position: relative;
                     margin: 20px 0 10px;
                   }
@@ -104,7 +104,7 @@
                     position: relative;
                     height: 66px;
 
-                    @media @m {
+                    @media @t, @mBig, @m {
                       .cols(3.8);
                       height: 40px;
                       position: initial;
@@ -118,7 +118,7 @@
                     .product__item_instruction_popup {
                       width: 550px;
 
-                      @media @m {
+                      @media @t, @mBig, @m {
                         left: 2.5%;
                         margin: 10px 0;
                         width: 90%;
@@ -127,7 +127,7 @@
 
                       &:before {
 
-                        @media @m {
+                        @media @t, @mBig, @m {
                           display: none;
                         }
                       }
